Update image source to use local asset

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </p>
   </div>
   <div>
-    <img src="https://via.placeholder.com/350x700" alt="PT Track App" style="width:100%; border-radius:20px;">
+    <img src="assets/app.png" alt="PT Track App" style="width:100%; border-radius:20px;">
   </div>
 </section>
 
